--- a/ImitateGuDong/ImitateGuDong/Sport/Camera/LLSportCameraViewController.xib
+++ b/ImitateGuDong/ImitateGuDong/Sport/Camera/LLSportCameraViewController.xib
@@ -15,8 +15,11 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="LLSportCameraViewController">
             <connections>
+                <outlet property="captureButton" destination="2jN-x6-IfP" id="TxP-2M-o6y"/>
                 <outlet property="distanceLabel" destination="clP-vz-u9W" id="c1l-uW-yv3"/>
                 <outlet property="previewView" destination="S5V-De-IiJ" id="kyd-7T-1ad"/>
+                <outlet property="rotateSharedButton" destination="dbR-rn-yPb" id="jzw-uv-kWs"/>
+                <outlet property="tipLabel" destination="fmr-IT-olL" id="8Ig-MP-9xy"/>
                 <outlet property="view" destination="M5i-G2-fU2" id="YRz-wb-OdB"/>
                 <outlet property="waterprintImageView" destination="JcM-xv-MzS" id="gea-SQ-ZhX"/>
                 <outletCollection property="maskViewConstraints" destination="LOM-Dm-VzH" id="4o9-12-Y1j"/>
@@ -28,23 +31,23 @@
             <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
+                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="dbR-rn-yPb" userLabel="分享按钮">
+                    <state key="normal" image="ic_waterprint_revolve"/>
+                    <connections>
+                        <action selector="switchCamera" destination="-1" eventType="touchUpInside" id="hDw-qG-bNI"/>
+                    </connections>
+                </button>
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="2jN-x6-IfP" userLabel="快门按钮">
                     <fontDescription key="fontDescription" type="system" pointSize="48"/>
-                    <state key="normal" title="✓" backgroundImage="ic_waterprint_shutter"/>
+                    <state key="normal" backgroundImage="ic_waterprint_shutter"/>
                     <connections>
                         <action selector="capture" destination="-1" eventType="touchUpInside" id="QRF-Et-mNs"/>
                     </connections>
                 </button>
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="URx-aj-xWy" userLabel="关闭按钮">
                     <state key="normal" image="ic_waterprint_close"/>
-                </button>
-                <button hidden="YES" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="dbR-rn-yPb" userLabel="分享按钮">
-                    <state key="normal" image="ic_waterprint_share"/>
-                </button>
-                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Fsy-k1-WJW" userLabel="镜头旋转按钮">
-                    <state key="normal" image="ic_waterprint_revolve"/>
                     <connections>
-                        <action selector="switchCamera" destination="-1" eventType="touchUpInside" id="gEV-sM-Pzb"/>
+                        <action selector="closeCemaraClick:" destination="-1" eventType="touchUpInside" id="mz0-sW-3Q6"/>
                     </connections>
                 </button>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="S5V-De-IiJ" userLabel="预览视图">
@@ -81,9 +84,15 @@
                                 <outlet property="imageView" destination="ycz-61-HFd" id="luL-PC-3xM"/>
                             </connections>
                         </view>
+                        <label opaque="NO" userInteractionEnabled="NO" alpha="0.0" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="fmr-IT-olL">
+                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                            <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                            <nil key="highlightedColor"/>
+                        </label>
                     </subviews>
                     <color key="backgroundColor" red="1" green="0.40000000600000002" blue="0.40000000600000002" alpha="1" colorSpace="calibratedRGB"/>
                     <constraints>
+                        <constraint firstItem="fmr-IT-olL" firstAttribute="centerX" secondItem="S5V-De-IiJ" secondAttribute="centerX" id="0lb-bZ-FiP"/>
                         <constraint firstItem="Vkl-51-28E" firstAttribute="leading" secondItem="S5V-De-IiJ" secondAttribute="trailing" constant="52" id="8SI-eA-Myg"/>
                         <constraint firstAttribute="trailing" secondItem="Vkl-51-28E" secondAttribute="trailing" priority="999" id="CVM-Y8-uEj"/>
                         <constraint firstAttribute="bottom" secondItem="E2X-RF-hed" secondAttribute="bottom" id="Ecs-3X-dE6"/>
@@ -94,6 +103,7 @@
                         <constraint firstItem="clP-vz-u9W" firstAttribute="centerX" secondItem="S5V-De-IiJ" secondAttribute="centerX" id="TmZ-xX-gaz"/>
                         <constraint firstItem="Vkl-51-28E" firstAttribute="width" secondItem="S5V-De-IiJ" secondAttribute="width" multiplier="0.5" id="YCm-zo-P12"/>
                         <constraint firstAttribute="bottom" secondItem="Vkl-51-28E" secondAttribute="bottom" id="Yfd-SD-9Oj"/>
+                        <constraint firstItem="fmr-IT-olL" firstAttribute="top" secondItem="S5V-De-IiJ" secondAttribute="top" constant="32" id="cRe-AC-Zdr"/>
                         <constraint firstItem="E2X-RF-hed" firstAttribute="width" secondItem="S5V-De-IiJ" secondAttribute="width" multiplier="0.5" id="fd7-Tg-qAO"/>
                         <constraint firstItem="Vkl-51-28E" firstAttribute="top" secondItem="S5V-De-IiJ" secondAttribute="top" id="ktn-n4-63o"/>
                         <constraint firstItem="JcM-xv-MzS" firstAttribute="centerX" secondItem="clP-vz-u9W" secondAttribute="centerX" id="mz7-xv-kQu"/>
@@ -106,16 +116,12 @@
                 <constraint firstItem="S5V-De-IiJ" firstAttribute="leading" secondItem="M5i-G2-fU2" secondAttribute="leading" id="0Gr-td-J7m"/>
                 <constraint firstItem="2jN-x6-IfP" firstAttribute="centerX" secondItem="M5i-G2-fU2" secondAttribute="centerX" id="8Ry-0y-J3S"/>
                 <constraint firstAttribute="trailing" secondItem="dbR-rn-yPb" secondAttribute="trailing" constant="16" id="IcB-Ne-39S"/>
-                <constraint firstItem="Fsy-k1-WJW" firstAttribute="centerY" secondItem="dbR-rn-yPb" secondAttribute="centerY" id="Jh5-aN-frc"/>
                 <constraint firstItem="URx-aj-xWy" firstAttribute="leading" secondItem="M5i-G2-fU2" secondAttribute="leading" constant="16" id="M7N-35-Jux"/>
                 <constraint firstAttribute="bottom" secondItem="2jN-x6-IfP" secondAttribute="bottom" constant="32" id="MDG-vL-djT"/>
-                <constraint firstItem="Fsy-k1-WJW" firstAttribute="centerX" secondItem="dbR-rn-yPb" secondAttribute="centerX" id="QAa-Af-oas"/>
                 <constraint firstItem="URx-aj-xWy" firstAttribute="centerY" secondItem="2jN-x6-IfP" secondAttribute="centerY" id="TXr-Tk-VhZ"/>
                 <constraint firstItem="dbR-rn-yPb" firstAttribute="centerY" secondItem="2jN-x6-IfP" secondAttribute="centerY" id="Ujh-0Y-7r0"/>
                 <constraint firstAttribute="trailing" secondItem="S5V-De-IiJ" secondAttribute="trailing" id="a7e-t2-eO4"/>
-                <constraint firstItem="Fsy-k1-WJW" firstAttribute="width" secondItem="dbR-rn-yPb" secondAttribute="width" id="dY2-9o-S0u"/>
                 <constraint firstItem="S5V-De-IiJ" firstAttribute="top" secondItem="M5i-G2-fU2" secondAttribute="top" id="kNH-F9-KpD"/>
-                <constraint firstItem="Fsy-k1-WJW" firstAttribute="height" secondItem="dbR-rn-yPb" secondAttribute="height" id="pes-qS-syT"/>
                 <constraint firstItem="2jN-x6-IfP" firstAttribute="top" secondItem="S5V-De-IiJ" secondAttribute="bottom" constant="32" id="wLi-zq-XSp"/>
             </constraints>
             <nil key="simulatedStatusBarMetrics"/>
@@ -128,7 +134,6 @@
         <image name="ic_waterprint_action_oriented" width="211" height="43"/>
         <image name="ic_waterprint_close" width="32" height="32"/>
         <image name="ic_waterprint_revolve" width="32" height="32"/>
-        <image name="ic_waterprint_share" width="32" height="32"/>
         <image name="ic_waterprint_shutter" width="66" height="66"/>
     </resources>
 </document>
